# paytm-ai-hackathon

./: README.md  build.sh  render.yaml
.github/instructions/: general.instructions.md
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
client/src/: App.tsx  index.css
client/src/assets/: .gitkeep
client/src/components/: .gitkeep  BarcodeScanner.tsx  DashboardLayout.tsx
client/src/pages/: AddEditItem.tsx  Dashboard.tsx  Home.tsx  Inventory.tsx  Orders.tsx  PaymentPage.tsx  ProductDetails.tsx  Scan.tsx  Transactions.tsx
client/src/services/: api.ts
client/src/utils/: .gitkeep  beep.ts
server/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py  test_available_models.py  test_sarvam_api.py
server/app/: config.py  main.py
server/app/api/: deps.py  inventory.py  orders.py  payments.py  routes.py  transactions.py  upload.py
server/app/database/: database.py
server/app/models/: __init__.py  inventory_item.py  order.py  transaction.py
server/app/schemas/: barcode.py  inventory.py  order.py  transaction.py
server/app/services/: agent_tools.py  barcode_lookup.py  hsn_lookup.py  llm.py
