[project]
name = "paytm-ai-hackathon-server"
version = "0.1.0"
description = "Paytm AI Hackathon - FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.2",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
]
